Fri Nov 10 22:41:11 GMT 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Fix compilation error when debug is enabled on BSD,
  				bug 121

Fri Nov 10 20:36:09 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	Added support for HAVE_CTIME_R_3, bug 123

Fri Nov 10 20:18:18 GMT 2006 (njh)
----------------------------------
  * libclamav:	Added portability to the JScript engine

Thu Nov  9 22:15:45 CET 2006 (tk)
---------------------------------
  * libclamav/pe.c: fix incorrect comparison, thanks to aCaB

Thu Nov  9 09:27:31 GMT 2006 (njh)
----------------------------------
  * libclamav/jscript.c:	Fixed a memory leak

Tue Nov  7 18:59:20 CET 2006 (tk)
---------------------------------
  * freshclam/manager.c: fix signedness problem (closes bug#122)

Mon Nov  6 00:12:28 CET 2006 (tk)
---------------------------------
  * libclamav/scanners.c: fix some typos in debug messages, thanks to
			  Christophe Jaillet

Mon Nov  6 00:02:57 CET 2006 (tk)
---------------------------------
  * libclamav/matcher-ac.c: minor optimisation, thanks to Christophe Jaillet

Sun Nov  5 19:11:28 CET 2006 (acab)
-----------------------------------
  * libclamav/regex_list.c: apply patch from Edvin to:
                            fix jump on uninitialized variable
                            fix improprer string length calculation
			    - closes bug 52 -

Sun Nov  5 15:08:09 CET 2006 (tk)
---------------------------------
  * libclamav/pe.c: don't report I/O error when EP is near (less than 200 bytes)
		    to the end of file (fixes handling of RCryptor encrypted
		    files and some infected execs)

Sun Nov  5 09:57:44 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	Another go at bug 115

Sun Nov  5 02:25:39 CET 2006 (acab)
-----------------------------------
  * libclamav/pe.c:	RVA broken.executable checks
  			skip checks on virtual-only sections (reported by
			Andrey J. Melnikoff (TEMHOTA) <temnota * kmv.ru> )
